fixed login and sign up bug on mobile screens; modified navbar

--- a/app/(auth)/create-account/create-account.module.css
+++ b/app/(auth)/create-account/create-account.module.css
@@ -1,4 +1,5 @@
 .createAccountBox {
+  background-color: white;
   border-radius: 12px;
   width: 500px;
 }
@@ -6,4 +7,35 @@
 .icon {
   background-color: white !important;
   border-right: 0 !important;
+}
+
+.loginBox {
+  border-radius: 12px;
+  background-color: white;
+}
+
+@media (max-width: 576px) {
+  .createAccountBox {
+    border-radius: 12px;
+    width: 500px;
+    background-color: #fafafa;
+  }
+
+  .loginBox {
+    border-radius: 12px;
+    background-color: #fafafa;
+  }
+}
+
+@media (min-width: 576px) and (max-width: 768px) {
+  .createAccountBox {
+    border-radius: 12px;
+    width: 500px;
+    background-color: #fafafa;
+  }
+
+  .loginBox {
+    border-radius: 12px;
+    background-color: #fafafa;
+  }
 }
