--- a/app/components/Navbar.module.css
+++ b/app/components/Navbar.module.css
@@ -1,6 +1,5 @@
 .active {
   background-color: #efebff;
-  margin-right: 50px;
   border-radius: 8px;
 }
 
